# plutus-rest-wrapper

./: README.md  plutus-rest-wrapper.cabal  start-server.sh
app/: AttributeServer.hs  attribute-server.hs
src/Plutus/Rest/: Utils.hs
src/Sample/: Runtime.hs
src/Sample/Contracts/: Escrow.hs  TokenMinter.hs  TokenMinter2.hs  TokenMinterTrace.hs  Trace.hs  Types.hs
