cabal-version:      3.0
name:               plutus-rest-wrapper
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0
license-files: LICENSE
author:             Your name
maintainer:         Your email

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -rtsopts
      -- See Plutus Tx readme
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    exposed-modules:
      Sample.Contracts.Escrow,
      Sample.Contracts.Trace,
      Sample.Contracts.Types,
      Sample.Runtime,
      Plutus.Rest.Utils,
      AttributeServer
    build-depends:
      base >= 4.9 && < 5,
      aeson -any,
      aeson-pretty -any,
      attoparsec -any,
      base-compat -any,
      blaze-html -any,
      blaze-markup -any,
      bytestring -any,
      containers -any,
      cardano-addresses -any,
      cardano-api -any,
      cardano-crypto-class -any,
      cardano-ledger-core -any,
      directory -any,
      either-unwrap -any,
      freer-extras -any,
      http-media -any,
      lens -any,
      lucid -any,
      mtl -any,
      openapi3 -any,
      playground-common -any,
      plutus-contract -any,
      plutus-ledger -any,
      plutus-ledger-api -any,
      plutus-ledger-constraints -any,
      plutus-pab -any,
      plutus-tx -any,
      plutus-tx-plugin -any,
      plutus-script-utils -any,
      process -any,
      serialise -any,
      servant -any,
      servant-server -any,
      string-conversions -any,
      tasty -any,
      tasty-hunit -any,
      text -any,
      text -any,
      time -any,
      wai -any,
      warp -any,
    hs-source-dirs: src, app

test-suite plutus-example-projects-test
  import: lang
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: examples/test
  other-modules:
    Spec.Game
  build-depends:
    plutus-tx -any,
    plutus-tx-plugin,
    plutus-contract -any,
    plutus-pab -any,
    plutus-ledger -any,
    plutus-rest-wrapper -any
  build-depends:
    base >=4.9 && <5,
    tasty -any,
    tasty-hunit -any,
    text -any,
    tasty-hedgehog >=0.2.0.0


executable plutus-rest-wrapper-pab
  import: lang
  main-is: Main.hs
  hs-source-dirs: pab
  ghc-options:
    -threaded
  build-depends:
    base >= 4.9 && < 5,
    data-default -any,
    plutus-contract -any,
    plutus-pab -any,
    plutus-rest-wrapper -any,
    aeson -any,
    freer-simple -any,
    prettyprinter -any,
    freer-extras -any,
    plutus-ledger -any,
    openapi3 -any,

executable attribute-server
  main-is: server-main.hs
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       base ^>= 4.14.1.0
                     , aeson
                     , attoparsec
                     , base-compat
                     , blaze-html
                     , blaze-markup
                     , bytestring
                     , cardano-api
                     , cardano-addresses
                     , directory
                     , either-unwrap
                     , http-media
                     , lucid
                     , mtl
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-rest-wrapper
                     , plutus-tx
                     , servant
                     , servant-server
                     , string-conversions
                     , text
                     , time
                     , wai
                     , warp